--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "LiigAppV2",
     "slug": "LiigAppV2",
-    "schema": "liigapp",
+    "scheme": "liigapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
