--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~49.0.8",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
@@ -22,6 +23,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
